# FlyingOctomap_code

./: .gitignore  .gitmodules  LICENSE  README.md
architecture/: CMakeLists.txt  package.xml
architecture/Tools/: Firmware_changes_instructions.txt  actinia_extra_beams.world  box.world  exploration_ltstarPaths.rviz  hitl.rviz  hitl_lazyThetaStar_debug.rviz  iris.xacro  iris_base.urdf  iris_base.xacro  iris_base_notShowingVelodyne.urdf  iris_collectDataHokuyo.xacro  model_octomap.rviz  posix_sitl_urdf.launch  posix_sitl_urdf_path.launch  realUAV.rviz  rviz_velodyne_model.rviz  save_free_mem.bash  set_ip.sh
architecture/cfg/: bag_generateOctomap_params.yaml  bag_hitl_params.yaml  debug_oppairs.yaml  exploration_params.yaml  exploration_params_actinia.yaml  powerPlant_params.yaml  realUav_hitl_params.yaml  realUav_params.yaml  sim_hitl_params.yaml  sim_hitl_params_vanillaGeofence.yaml  sim_sitl_collectData.yaml
architecture/include/: architecture_math.h  exploration_state_machine.h  goal_state_machine.h  ual_flightPlan_comms.h
architecture/install/: ubuntu_sim_common_deps.sh  ubuntu_sim_ros_gazebo.sh
architecture/launch/: debug_lazyThetaStar.launch  hitl_laptop_generateOctomap.launch  hitl_laptop_measureLazyThetaStar_loadOctree.launch  hitl_laptop_powerPlant.launch  hitl_laptop_px4_simulation.launch  hitl_laptop_saveOctomap.launch  hitl_upboard_architecture.launch  hitl_upboard_highComputation.launch  hitl_upboard_measureLazyThetaStar_loadOctree.launch  hitl_upboard_path_command.launch  hitl_upboard_powerPlant.launch  laptop_octomapFromFile.launch  mision_ual.launch  octreeFile_asyncNode_rviz.launch  posix_hitl_docker.launch  posix_hitl_path_command.launch  posix_hitl_upboard.launch  posix_sitl_urdf.launch  posix_sitl_urdf_path.launch  px4_mavros_offboard.launch  px4_ual_powerPlant.launch  realUav_fly.launch  realUav_fly_base_link.launch  realUav_fly_debug.launch  realUav_laptop_monitor.launch  realUav_onGround.launch  realUav_upboard_exploration.launch  realUav_upboard_octomap.launch  realUav_upboard_path_command.launch  realUav_upboard_px4_old.launch  realUav_upboard_px4comms.launch  realUav_upboard_ualServer.launch  sitl_laptop_collectData.launch  sitl_laptop_collectTrackErrorData.launch  sitl_laptop_debugGoalNode.launch  sitl_laptop_octreeFromFile.launch  sitl_laptop_path_command.launch  sitl_powerPlant.launch  sitl_powerPlant_goal.launch  sitl_urdf.launch  (+1 more)
architecture/maneuvers/: corridor_path.csv  test_flight_path.csv
architecture/rviz_configurations/: bag_filterPointCloud.rviz  debug_pose.rviz  exploration_ltstarPaths.rviz  hitl.rviz  measure.rviz  realUAV.rviz  sim_filterPointCloud.rviz  video_architecture.rviz
architecture/src/: current_position_provider_node.cpp  exploration_state_machine.cpp  fake_position_provider_node.cpp  goal_sm_node.cpp  goal_state_machine.cpp  gps_utm_tf_broadcaster_node.cpp  handbrake_node.py  mav_comms_node.cpp  px4_mavros_offboard_node.cpp  save_poses_node.cpp  save_tracking_data_node.cpp  state_manager_node.cpp  state_manager_node_explorationManeuver.cpp  ual_communication.cpp  ual_communication_node.cpp  ual_flightPlan_comms.cpp  ual_server.cpp
architecture/test/: architecture_tests.cpp  goal_state_machine_tests.cpp  work_in_progress_architecture_tests.cpp
architecture/worlds/: 3D_puzzle_model.world  actinia.world  actinia_detail_3.world  actinia_extra_beams.world  force_waypoint_sequence.world  force_waypoint_sequence_more_space.world  huge_block.world
frontiers/: CMakeLists.txt  package.xml
frontiers/include/: frontiers.h  frontiers_common.h  neighbors.h  next_best_view.h  ordered_neighbors.h  volume.h
frontiers/launch/: debug_frontiers.launch  debug_frontiers.rviz  debug_frontiers_.launch  debug_neighbors.launch  wip_node.launch
frontiers/src/: frontiers.cpp  frontiers_async_node.cpp  frontiers_debug_node.cpp  neighbors.cpp  next_best_view.cpp  next_best_view_node.cpp
frontiers/test/: circulator_tests.cpp  frontier_lib_tests.cpp  neighbor_tests.cpp  next_best_view_tests.cpp  volume_tests.cpp  work_in_progress_frontiers_tests.cpp
frontiers_msgs/: CMakeLists.txt  package.xml
frontiers_msgs/msg/: FrontierReply.msg  FrontierRequest.msg  LocalGeofenceRequest.msg  VoxelMsg.msg  frontierReply.msg
frontiers_msgs/srv/: CheckIsExplored.srv  CheckIsFrontier.srv  FindFrontiers.srv
gridBenchmark/: CMakeLists.txt  package.xml
gridBenchmark/include/: frontier_async_node.h  frontier_cells_node.h  grid_benchmark.h  qdbmp.h
gridBenchmark/src/: frontier_async_node.cpp  frontier_node.cpp  grid_benchmark.cpp
gridBenchmark/test/: algorithm_tests.cpp  frontier_node_tests.cpp  grid_benchmark_dataCollection.cpp  grid_benchmark_tests.cpp  voxel_tests.cpp
launch_options/: 20161114_reviewMeeting.rviz  CMakeLists.txt  custom_rosconsole.conf  lazyThetaConfig.rviz  package.xml  showPath.rviz  showPath_px4.rviz
launch_options/include/: argument_parser.h
launch_options/launch/: 20161114_rm_demo.launch  20170222_generateOctree.launch  20170829_showLazyThetaStarPaths.launch  20180219_freiburg_showLazyThetaStarPaths.launch  building_octree_and_gazebo_grvc_velodyne.launch  octree_and_gazebo_grvc_velodyne.launch  test_grvc_velodyne.launch  test_lazyThetaLocal_mavlink_hal_velodyne.launch  test_lazyTheta_mavlink_hal_velodyne.launch  test_mavlink_hal_grvc.launch  test_mavlink_hal_grvc_velodyne.launch  test_multidofService_mavlink_hal_grvc_velodyne.launch  test_server.launch
launch_options/src/: teleop_pandora.cpp
launch_options/urdf/: actinia_scaled_px4.world  box.urdf.xacro  circle.world  circle_1m.world  circle_buildingEditor.sdf  circle_fix.world  double_circle_1m.world  double_circle_v4.world  offShoreOil.world  offShoreOil_1m.world  s_1m.world  (+3 more)
lazy_theta_star/: CMakeLists.txt  Doxyfile  package.xml
observation_maneuver/: CMakeLists.txt  package.xml
path_planning/: CMakeLists.txt  package.xml
pcl_maker/: 201706_redUas_data.rviz  201706_redUas_data_v2.rviz  2017_08_29_showPath.rviz  CMakeLists.txt  map_creator.launch  package.xml
rviz_interface/: CMakeLists.txt  package.xml
thrun/: CMakeLists.txt  package.xml
(+238 files in other folders)
