<?xml version="1.0"?>
<package format="2">
  <name>architecture</name>
  <version>0.1.0</version>
  <description>A package for putting the architecture together</description>

  <maintainer email="mfaria@todo.todo">mfaria</maintainer>
  <license>MIT</license>

  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>

</package>
