<?xml version="1.0"?>
<package format="2">
  <name>path_planning</name>
  <version>0.2.0</version>
  <description>A package for path planners on octree</description>

  <maintainer email="margaridaCostaFaria@gmail.com">Margarida Faria</maintainer>
  <license>MIT</license>

  <build_depend>catkin_simple</build_depend>
  <buildtool_depend>catkin</buildtool_depend>

  <depend>roscpp</depend>
  <depend>octomap_msgs</depend>
  <depend>octomap_ros</depend>
  <depend>std_msgs</depend>
  <depend>path_planning_msgs</depend>

  <!-- <build_depend>message_generation</build_depend>
  <exec_depend>message_runtime</exec_depend> -->

</package>